# turukuun-pliis

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
.github/ISSUE_TEMPLATE/: bug_report.md  koodikatselmointi---code-review.md
docs/: architecture.drawio  architecture.md  guide.md  requirement_specification.md  worksheet.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml  tasks.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/: kassapaate.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: game.py  index.py  person.py
src/logic/: checkpoint.py  game.py  person.py  person_generator.py  player.py  ssid.py
src/logic/entry_documents/: entry_document.py  passport.py
src/repository/: local.py  sheets.py
src/service/: name_service.py
src/tests/: checkpoint_test.py  entry_document_test.py  game_test.py  local_repo_test.py  passport_test.py  person_test.py  sheets_repo_test.py  ssid_test.py
src/ui/: game.py  helper.py  passport_sprite.py  person_sprite.py  screen.py
