[tool.poetry]
name = "turukuun-pliis"
version = "0.0.1"
description = "Papers Please -like pygame for software development methods assignment"
authors = ["Eetu Raunio <eetu.raunio@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.1.0"
invoke = "^1.6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
coverage = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
